list all created lists on the index page, and allow user to add new lists from that page.

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,3 +7,12 @@
     <% end %>
   <% end %>
 </ul>
+<br>
+<div class="form-group">
+  <form action="/list/new" method="post">
+    <label for="list_to_be_added">Enter a new list here:</label>
+    <input type="text" id="list_to_be_added" name="list_to_be_added" class="form-control">
+    <br>
+    <button type="submit" name="add_new_list" class="btn btn-primary">Add a New List</button>
+  </form>
+</div>
